[package]
name = "hello"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.2"
reqwest = "0.11.18"
rocket = "0.4.10"
serde = "1.0.183"
serde_json = "1.0"
tracing = "0.1.37"
# my_macro = { version = "0.1", path = "../my_macro" }